fix: [MGS-4736] Hide scrollbar on sliders on tablet and desktop devices

--- a/src/components/_slider/mixin.scss
+++ b/src/components/_slider/mixin.scss
@@ -1,6 +1,7 @@
 @import 'config/variables';
 @import 'utils/reset-list-style';
 @import 'utils/strip-unit';
+@import 'utils/hide-scrollbar';
 @import 'components/_slider/hooks';
 
 // Calculate container breakpoint + 2 * edge gutter and transform to 'em' unit for media query
@@ -115,6 +116,10 @@ $toContainerBreakpointEm: ($containerBreakpointPx - 1) / 16 * 1em;
 
         @supports (scroll-behavior: smooth) {
             scroll-snap-type: x mandatory;
+        }
+
+        @include media('>=tablet') {
+            @include hide-scrollbar();
         }
     }
 
